zeit.content.dynamicfolder changes
==================================


1.0.4 (unreleased)
------------------

- Nothing changed yet.


1.0.3 (2015-09-07)
------------------

- Decode non-ascii ``url_value`` correctly.


1.0.2 (2015-08-25)
------------------

- Use simplified folder view that does not instantiate all child objects
  (performance optimization).


1.0.1 (2015-06-09)
------------------

- Make text of content nodes available in template via the key `text`.


1.0.0 (2015-05-18)
------------------

- Initial release.