@@ -5,7 +5,8 @@ zeit.content.dynamicfolder changes
 1.0.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Speed up configuration by appending included nodes at the end of the parent
+  element instead of at precisely the position of the ``<include>`` node.
 
 
 1.0.3 (2015-09-07)
